<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/background_color"
    tools:context="fpl.md37.genz_fashion.ManagerScreen.SignInActivity">

    <FrameLayout
        android:id="@+id/content_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_gravity="top"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/bg_signin" />
        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="270dp"
                android:layout_height="220dp"
                android:src="@drawable/logo_app" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:text="Hi' Welcome back, you've been missed"
                android:textColor="#797979"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:text="Sign In"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edit_text"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:endIconMode="password_toggle"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/checkbox_1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Remember me"
                android:padding="2dp" />
            <TextView
                android:id="@+id/forgotpass"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Forgot Password?"
                android:textColor="#2F7CAC"
                android:gravity="end"/>
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnsign"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="Sign In"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            app:cornerRadius="12dp"
            android:backgroundTint="#6394B7"
            />
        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:indeterminateTint="@color/blue"
            android:visibility="gone" />
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don’t have account?"
                android:textColor="#808080" />

            <TextView
                android:id="@+id/toRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/New"
                android:textColor="@color/blue" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>