<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@color/background_color"
    android:overScrollMode="never"
    android:fitsSystemWindows="true"
    android:scrollbars="none"
    tools:context="fpl.md37.genz_fashion.ManagerScreen.SignUpActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/liner_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_14sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_14sdp"
                        android:gravity="center"
                        android:text="Register"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_22sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_14sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_14sdp"
                        android:gravity="center"
                        android:text="Fill your information below or register with your social account."
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_14sdp"
                            android:layout_marginEnd="@dimen/_14sdp"
                            android:background="@drawable/background_edit_text"
                            android:hint="Username"
                            android:textColor="@color/black" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_14sdp"
                            android:layout_marginEnd="@dimen/_14sdp"
                            android:background="@drawable/background_edit_text"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black" />


                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_14sdp"
                            android:layout_marginEnd="@dimen/_14sdp"
                            android:background="@drawable/background_edit_text"
                            android:hint="@string/address"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black" />


                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_14sdp"
                            android:layout_marginEnd="@dimen/_14sdp"
                            android:background="@drawable/background_edit_text"
                            android:hint="@string/phone"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black" />


                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordTil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"

                        app:counterEnabled="true"
                        app:counterMaxLength="20"

                        app:helperText="Enter Password"
                        app:helperTextEnabled="true"

                        app:helperTextTextColor="#FB8C00"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_14sdp"
                            android:layout_marginEnd="@dimen/_14sdp"
                            android:background="@drawable/background_edit_text"
                            android:hint="Password"
                            android:inputType="textPassword" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordTil_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"

                        app:counterEnabled="true"
                        app:counterMaxLength="20"

                        app:helperText="Re-enter password"
                        app:helperTextEnabled="true"

                        app:helperTextTextColor="#FB8C00"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_nhaplai_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_14sdp"
                            android:layout_marginEnd="@dimen/_14sdp"
                            android:background="@drawable/background_edit_text"
                            android:hint="Re-password"
                            android:inputType="textPassword" />


                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_dang_ky"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/liner_01"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:background="@drawable/button"
            android:text="Sign Up"
            android:textAllCaps="false"
            android:textColor="@color/white" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_dang_ky"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_cauhoi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="Do you already have an account?"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_dang_nhap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/in"
                android:textColor="@color/blue"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>


</androidx.core.widget.NestedScrollView>